--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "build": "^0.1.4",
     "date-fns": "^2.29.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "json-server": "^0.17.0",
     "typescript": "^4.7.4"
   }
 }
