--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "build": "^0.1.4",
     "date-fns": "^2.29.2",
     "next": "12.2.5",
